Don't distribute scripts created from xx.in.  The .in's should automatically be distributed since they appear in AC_OUTPUT.

--- a/rpm/Makefile.in
+++ b/rpm/Makefile.in
@@ -69,15 +69,16 @@ am__nobase_list = $(am__nobase_strip_setup); \
 am__base_list = \
   sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
   sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
-am__installdirs = "$(DESTDIR)$(rpmdir)" "$(DESTDIR)$(etcdir)" \
-	"$(DESTDIR)$(rpmdir)"
-SCRIPTS = $(dist_rpm_SCRIPTS)
+am__installdirs = "$(DESTDIR)$(rpmdir)" "$(DESTDIR)$(rpmdir)" \
+	"$(DESTDIR)$(etcdir)" "$(DESTDIR)$(rpmdir)" \
+	"$(DESTDIR)$(etcdir)"
+SCRIPTS = $(dist_rpm_SCRIPTS) $(rpm_SCRIPTS)
 SOURCES =
 DIST_SOURCES =
 am__dist_rpm_DATA_DIST = mdsipd.xinetd mdsipsd.xinetd \
 	fusiongrid-mdsip.xinetd fusiongrid-mdsips.xinetd \
 	globus-gatekeeper.xinetd globus-gridftp.xinetd
-DATA = $(dist_etc_DATA) $(dist_rpm_DATA)
+DATA = $(dist_etc_DATA) $(dist_rpm_DATA) $(etc_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
@@ -288,9 +289,11 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 uiddir = @uiddir@
 etcdir = $(exec_prefix)/etc
-dist_etc_DATA = envsyms mdsplus.conf.template
+etc_DATA = envsyms
+dist_etc_DATA = mdsplus.conf.template
 rpmdir = $(exec_prefix)/rpm
-dist_rpm_SCRIPTS = post_install_script post_uninstall_script
+rpm_SCRIPTS = post_uninstall_script
+dist_rpm_SCRIPTS = post_install_script
 @GLOBUSLICENSE_FALSE@dist_rpm_DATA = mdsipd.xinetd mdsipsd.xinetd
 @GLOBUSLICENSE_TRUE@dist_rpm_DATA = fusiongrid-mdsip.xinetd fusiongrid-mdsips.xinetd globus-gatekeeper.xinetd globus-gridftp.xinetd
 all: all-am
@@ -364,6 +367,40 @@ uninstall-dist_rpmSCRIPTS:
 	test -n "$$list" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(rpmdir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(rpmdir)" && rm -f $$files
+install-rpmSCRIPTS: $(rpm_SCRIPTS)
+	@$(NORMAL_INSTALL)
+	test -z "$(rpmdir)" || $(MKDIR_P) "$(DESTDIR)$(rpmdir)"
+	@list='$(rpm_SCRIPTS)'; test -n "$(rpmdir)" || list=; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  if test -f "$$d$$p"; then echo "$$d$$p"; echo "$$p"; else :; fi; \
+	done | \
+	sed -e 'p;s,.*/,,;n' \
+	    -e 'h;s|.*|.|' \
+	    -e 'p;x;s,.*/,,;$(transform)' | sed 'N;N;N;s,\n, ,g' | \
+	$(AWK) 'BEGIN { files["."] = ""; dirs["."] = 1; } \
+	  { d=$$3; if (dirs[d] != 1) { print "d", d; dirs[d] = 1 } \
+	    if ($$2 == $$4) { files[d] = files[d] " " $$1; \
+	      if (++n[d] == $(am__install_max)) { \
+		print "f", d, files[d]; n[d] = 0; files[d] = "" } } \
+	    else { print "f", d "/" $$4, $$1 } } \
+	  END { for (d in files) print "f", d, files[d] }' | \
+	while read type dir files; do \
+	     if test "$$dir" = .; then dir=; else dir=/$$dir; fi; \
+	     test -z "$$files" || { \
+	       echo " $(INSTALL_SCRIPT) $$files '$(DESTDIR)$(rpmdir)$$dir'"; \
+	       $(INSTALL_SCRIPT) $$files "$(DESTDIR)$(rpmdir)$$dir" || exit $$?; \
+	     } \
+	; done
+
+uninstall-rpmSCRIPTS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(rpm_SCRIPTS)'; test -n "$(rpmdir)" || exit 0; \
+	files=`for p in $$list; do echo "$$p"; done | \
+	       sed -e 's,.*/,,;$(transform)'`; \
+	test -n "$$list" || exit 0; \
+	echo " ( cd '$(DESTDIR)$(rpmdir)' && rm -f" $$files ")"; \
+	cd "$(DESTDIR)$(rpmdir)" && rm -f $$files
 install-dist_etcDATA: $(dist_etc_DATA)
 	@$(NORMAL_INSTALL)
 	test -z "$(etcdir)" || $(MKDIR_P) "$(DESTDIR)$(etcdir)"
@@ -404,6 +441,26 @@ uninstall-dist_rpmDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(rpmdir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(rpmdir)" && rm -f $$files
+install-etcDATA: $(etc_DATA)
+	@$(NORMAL_INSTALL)
+	test -z "$(etcdir)" || $(MKDIR_P) "$(DESTDIR)$(etcdir)"
+	@list='$(etc_DATA)'; test -n "$(etcdir)" || list=; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(etcdir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(etcdir)" || exit $$?; \
+	done
+
+uninstall-etcDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(etc_DATA)'; test -n "$(etcdir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	test -n "$$files" || exit 0; \
+	echo " ( cd '$(DESTDIR)$(etcdir)' && rm -f" $$files ")"; \
+	cd "$(DESTDIR)$(etcdir)" && rm -f $$files
 tags: TAGS
 TAGS:
 
@@ -445,7 +502,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(SCRIPTS) $(DATA)
 installdirs:
-	for dir in "$(DESTDIR)$(rpmdir)" "$(DESTDIR)$(etcdir)" "$(DESTDIR)$(rpmdir)"; do \
+	for dir in "$(DESTDIR)$(rpmdir)" "$(DESTDIR)$(rpmdir)" "$(DESTDIR)$(etcdir)" "$(DESTDIR)$(rpmdir)" "$(DESTDIR)$(etcdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -494,7 +551,7 @@ info: info-am
 info-am:
 
 install-data-am: install-dist_etcDATA install-dist_rpmDATA \
-	install-dist_rpmSCRIPTS
+	install-dist_rpmSCRIPTS install-etcDATA install-rpmSCRIPTS
 
 install-dvi: install-dvi-am
 
@@ -539,7 +596,8 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-dist_etcDATA uninstall-dist_rpmDATA \
-	uninstall-dist_rpmSCRIPTS
+	uninstall-dist_rpmSCRIPTS uninstall-etcDATA \
+	uninstall-rpmSCRIPTS
 
 .MAKE: install-am install-strip
 
@@ -548,13 +606,15 @@ uninstall-am: uninstall-dist_etcDATA uninstall-dist_rpmDATA \
 	install install-am install-data install-data-am \
 	install-dist_etcDATA install-dist_rpmDATA \
 	install-dist_rpmSCRIPTS install-dvi install-dvi-am \
-	install-exec install-exec-am install-html install-html-am \
-	install-info install-info-am install-man install-pdf \
-	install-pdf-am install-ps install-ps-am install-strip \
-	installcheck installcheck-am installdirs maintainer-clean \
-	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
-	pdf-am ps ps-am uninstall uninstall-am uninstall-dist_etcDATA \
-	uninstall-dist_rpmDATA uninstall-dist_rpmSCRIPTS
+	install-etcDATA install-exec install-exec-am install-html \
+	install-html-am install-info install-info-am install-man \
+	install-pdf install-pdf-am install-ps install-ps-am \
+	install-rpmSCRIPTS install-strip installcheck installcheck-am \
+	installdirs maintainer-clean maintainer-clean-generic \
+	mostlyclean mostlyclean-generic pdf pdf-am ps ps-am uninstall \
+	uninstall-am uninstall-dist_etcDATA uninstall-dist_rpmDATA \
+	uninstall-dist_rpmSCRIPTS uninstall-etcDATA \
+	uninstall-rpmSCRIPTS
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
