Unify handling of RPATHLINK

--- a/setevent/Makefile.am
+++ b/setevent/Makefile.am
@@ -1,13 +1,18 @@
 libdir=@MAKESHLIBDIR@
-AM_LDFLAGS = -L$(libdir) -lMdsShr
 
+#FIXME: Use rpath-link until build system is flattened
 if RPATHLINK
 RPATHFLAGS = $(RPATHLINK)=$(libdir)
 else
 RPATHFLAGS =
 endif
 
+AM_LDFLAGS = $(RPATHFLAGS)
+LDADD = -L$(libdir) -lMdsShr
+
 bin_PROGRAMS = setevent
 setevent_SOURCES = setevent.c
-setevent_LDFLAGS = $(AM_LDFLAGS) $(RPATHFLAGS)
+
+#FIXME: Clean up LIBS in top level configure
+LIBS=
 
