First attempt at a way to convert static to shared libs

--- a/actions/Makefile.in
+++ b/actions/Makefile.in
@@ -185,6 +185,7 @@ LIBXP = @LIBXP@
 LINKJNI = @LINKJNI@
 LINKMODULE = @LINKMODULE@
 LINKSHARED = @LINKSHARED@
+LINKWHOLE = @LINKWHOLE@
 LOC = @LOC@
 LTLIBOBJS = @LTLIBOBJS@
 LV = @LV@
