--- a/cdu/Makefile.in
+++ b/cdu/Makefile.in
@@ -181,6 +181,7 @@ LIBXP = @LIBXP@
 LINKJNI = @LINKJNI@
 LINKMODULE = @LINKMODULE@
 LINKSHARED = @LINKSHARED@
+LINKWHOLE = @LINKWHOLE@
 LOC = @LOC@
 LTLIBOBJS = @LTLIBOBJS@
 LV = @LV@
