--- a/configure.in
+++ b/configure.in
@@ -23,6 +23,22 @@ AC_PROG_CC
 AC_PROG_CXX
 AS_VAR_SET_IF([NOF77], [], [AC_PROG_F77([g77 gfortran f90 f95])])
 
+AC_MSG_CHECKING([whether to build shared libraries])
+AC_ARG_ENABLE([shared],
+              [AS_HELP_STRING([--disable-shared],
+                              [Prevent building shared libraries])],
+              [],
+              [enable_shared=yes])
+
+LINKWHOLEON=
+LINKWHOLEOFF=
+AS_CASE([$enable_shared],
+        [yes], [AS_CASE([$host],
+                        [*apple*], [LINKWHOLEON=-Wl,-force_load],
+                        [*linux*], [LINKWHOLEON=-Wl,--whole-archive;LINKWHOLEOFF=-Wl,--no-whole-archive])])
+AC_SUBST([LINKWHOLE])
+AC_MSG_RESULT([$enable_shared])
+
 dnl See if the linker supports -rpath-link
 AC_MSG_CHECKING([whether the linker supports -rpath-link])
 AS_VAR_SET_IF([LDFLAGS], [AS_VAR_SET([save_LDFLAGS], ["$LDFLAGS"])])
