--- a/macosx/Makefile.in
+++ b/macosx/Makefile.in
@@ -162,6 +162,7 @@ LIBXP = @LIBXP@
 LINKJNI = @LINKJNI@
 LINKMODULE = @LINKMODULE@
 LINKSHARED = @LINKSHARED@
+LINKWHOLE = @LINKWHOLE@
 LOC = @LOC@
 LTLIBOBJS = @LTLIBOBJS@
 LV = @LV@
