--- a/manpages/Makefile.in
+++ b/manpages/Makefile.in
@@ -160,6 +160,7 @@ LIBXP = @LIBXP@
 LINKJNI = @LINKJNI@
 LINKMODULE = @LINKMODULE@
 LINKSHARED = @LINKSHARED@
+LINKWHOLE = @LINKWHOLE@
 LOC = @LOC@
 LTLIBOBJS = @LTLIBOBJS@
 LV = @LV@
