--- a/cdu/Makefile.in
+++ b/cdu/Makefile.in
@@ -306,7 +306,7 @@ uiddir = @uiddir@
 lib_LIBRARIES = libCdu.a
 libCdu_a_SOURCES = cli_routines.c cli_util.c dasutil_routines1.c dasutil_routines2.c dasutil_routines3.c
 cdu_SOURCES = cdu.c cdu_util.c cdu_write.c
-cdu_LDADD = libCdu.a -L$(libdir) -lMdsShr
+cdu_LDADD = libCdu.a -L@MAKELIBDIR@ -lMdsShr
 all: all-am
 
 .SUFFIXES:
