--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -170,8 +170,7 @@ ifndef MDSIP_CONNECTIONS
 	fi;
 endif
 	if [ ! -d $(exec_prefix)/etc ] ; then \
-                @MAKEBINDIR@mkdirhier $(exec_prefix)/etc; \
-                chmod 755 $(exec_prefix)/etc; \
+                $(MKDIR_P) -m 755 $(exec_prefix)/etc; \
         fi;
 	$(INSTALL) -m 755  mdsip.hosts $(exec_prefix)/etc
         ifdef MDSIP_CONNECTIONS
