--- a/mdsobjects/java/Makefile.in
+++ b/mdsobjects/java/Makefile.in
@@ -79,8 +79,7 @@ depend: ; @ :
 
 install:
 	if [ ! -d @exec_prefix@/java/classes ] ; then \
-                @MAKEBINDIR@mkdirhier @exec_prefix@/java/classes; \
-                chmod -R 755 @exec_prefix@/java; \
+                $(MKDIR_P) -m 755 @exec_prefix@/java/classes; \
         fi;
 	$(INSTALL) -m 644  @MAKEJAVADIR@classes/mdsobjects.jar @exec_prefix@/java/classes
 
