--- a/mdsshr/Makefile.in
+++ b/mdsshr/Makefile.in
@@ -40,8 +40,7 @@ clean :
 
 install:
 	if [ ! -d @libdir@ ] ; then \
-                @MAKEBINDIR@mkdirhier @libdir@; \
-                chmod 755 @libdir@; \
+                $(MKDIR_P) -m 755 @libdir@; \
         fi;
 	$(INSTALL) -m 755  @MAKESHLIBDIR@libMdsShr@SHARETYPE@ @libdir@
 	if (test @SHARETYPE@ != .a) then \
