Propagate MKDIR_P to all non-automake sub makes

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -16,6 +16,7 @@ JAVAC = @JAVAC@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
+MKDIR_P = @MKDIR_P@
 RANLIB = @RANLIB@
 #FIXME: why need this?
 RM = @abs_top_srcdir@/devscripts/rm_if
