--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -55,7 +55,7 @@ UDT_OBJECTS = IoRoutinesUdt.o  $(UDT4_OBJECTS)
 UDTV6_OBJECTS = IoRoutinesUdtV6.o $(UDT4_OBJECTS)
 TUNNEL_SOURCES = IoRoutinesTunnel.c
 TUNNEL_OBJECTS = $(TUNNEL_SOURCES:.c=.o)
-CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(TUNNEL_OBJECTS) $(TCP_OBJECTS) $(UDT_OBJECTS) $(UDTV6_OBJECTS) $(SERVER_LIB_OBJECTS) $(SERVER_OBJECTS)
+CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(TUNNEL_OBJECTS) $(TCP_OBJECTS) $(TCPV6_OBJECTS) $(UDT_OBJECTS) $(UDTV6_OBJECTS) $(SERVER_LIB_OBJECTS) $(SERVER_OBJECTS)
 ALL_SOURCES = $(LIB_SOURCES) $(TUNNEL_SOURCES) $(TCP_SOURCES) $(SERVER_LIB_SOURCES) $(SERVER_SOURCES)
 MDSIP_CLIENT_SSH = @MAKEBINDIR@mdsip-client-ssh
 MDSIP_CLIENT_HTTP = @MAKEBINDIR@mdsip-client-http
@@ -94,6 +94,7 @@ all : $(MAKEFILE_HEADER) \
       $(MdsIpSrvShr) \
       $(MdsIpTunnel) \
       $(MdsIpTCP) \
+      $(MdsIpTCPV6) \
       $(MdsIpUDT) \
       $(MdsIpUDTV6) \
       $(MdsIpGSI) \
