--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -289,8 +289,9 @@ javadir = $(exec_prefix)/java/classes
 docsdir = $(exec_prefix)/java/classes/docs
 
 # Create the shell script that runs the program
-bin_SCRIPTS = scripts/jTraverser
+bin_SCRIPTS = jTraverser
 
+#$(INSTALL) -D $< $@
 # Build the class files
 CLASSPATH_ENV = CLASSPATH=$(top_builddir)/javascope/jScope.jar
 java_JAVA = $(SOURCES)
@@ -747,8 +748,8 @@ uninstall-am: uninstall-binSCRIPTS uninstall-javaDATA \
 	uninstall-am uninstall-binSCRIPTS uninstall-javaDATA \
 	uninstall-javaJAVA
 
-$(bin_SCRIPTS): jTraverser.template
-	$(INSTALL) -D $< $@
+$(bin_SCRIPTS): $(srcdir)/jTraverser.template
+	cp $< $@
 
 TreeServer_Stub.class:
 	$(RMIC) TreeServer
