classjava.stamp because classdist_java.stamp after the change to distribute java sources

--- a/javascope/Makefile.am
+++ b/javascope/Makefile.am
@@ -26,7 +26,7 @@ dist_java_DATA = jScope.properties MindTerm.jar
 
 java_DATA = jScope.jar WaveDisplay.jar
 javadir = $(exec_prefix)/java/classes
-$(java_DATA): classjava.stamp
+$(java_DATA): classdist_java.stamp
 
 EXTRA_DIST += colors1.tbl
 jScope.jar: colors1.tbl
