Keep source files list in a makefiles common to both make and nmake

--- a/javascope/Makefile.am
+++ b/javascope/Makefile.am
@@ -34,3 +34,4 @@ JSCOPE_CLASS = $(COMMON_CLASS) $(JSCOPE_SRC:.java=*.class)
 WAVEDISPLAY_CLASS = $(COMMON_CLASS) $(WAVEDISPLAY_SRC:.java=*.class)
 CLEANFILES += $(JSCOPE_CLASS) $(WAVEDISPLAY_CLASS)
 
+include Makefile.common
