--- a/javascope/Makefile.in
+++ b/javascope/Makefile.in
@@ -35,9 +35,10 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-subdir = javascope
 DIST_COMMON = $(dist_docs_DATA) $(dist_java_DATA) $(dist_java_JAVA) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in
+	$(srcdir)/Makefile.am $(srcdir)/Makefile.common \
+	$(srcdir)/Makefile.in
+subdir = javascope
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -304,10 +305,65 @@ dist_java_JAVA = $(JSCOPE_SRC) $(WAVEDISPLAY_SRC) $(COMMON_SRC)
 COMMON_CLASS = $(COMMON_SRC:.java=*.class)
 JSCOPE_CLASS = $(COMMON_CLASS) $(JSCOPE_SRC:.java=*.class)
 WAVEDISPLAY_CLASS = $(COMMON_CLASS) $(WAVEDISPLAY_SRC:.java=*.class)
+DOCS = jScope.html jScope.jpg popup.jpg about_jscope.jpg \
+	CompositeWaveDisplay.html \
+	ConnectionEvent.html ConnectionListener.html \
+	DataProvider.html \
+	FrameData.html \
+	ReadMe.html data_popup.jpg data_setup.jpg frame_popup.jpg image_setup.jpg \
+	UpdateEvent.html UpdateEventListener.html \
+	WaveData.html WaveDisplay.html
+
+COMMON_SRC = \
+	jScope/AboutWindow.java               jScope/ASCIIDataProvider.java       jScope/AsdexDataProvider.java     \
+	jScope/Base64.java                    jScope/ColorDialog.java             jScope/ColorMapDialog.java        \
+	jScope/ColorMap.java                  jScope/ConnectionEvent.java         jScope/ConnectionListener.java    \
+	jScope/ContourSignal.java             jScope/DataAccess.java              jScope/DataAccessURL.java         \
+	jScope/DataCached.java                jScope/DataCacheObject.java         jScope/DataProvider.java          \
+	jScope/DataServerItem.java            jScope/Descriptor.java              jScope/FakeTWUProperties.java     \
+	jScope/FontSelection.java             jScope/FrameData.java               jScope/Frames.java                \
+	jScope/FtuDataProvider.java           jScope/Grid.java                    jScope/ImageTransferable.java     \
+	jScope/JetDataProvider.java           jScope/JetMdsDataProvider.java      jScope/JiDataSource.java          \
+	jScope/JiDim.java                     jScope/JiNcSource.java              jScope/JiNcVarByte.java           \
+	jScope/JiNcVarChar.java               jScope/JiNcVarDouble.java           jScope/JiNcVarFloat.java          \
+	jScope/JiNcVarImp.java                jScope/JiNcVarInt.java              jScope/JiNcVar.java               \
+	jScope/JiNcVarShort.java              jScope/JiSlabIterator.java          jScope/JiSlab.java                \
+	jScope/JiVarImpl.java                 jScope/JiVar.java                   jScope/jScopeBrowseSignals.java   \
+	jScope/jScopeBrowseUrl.java           jScope/jScopeDefaultValues.java     jScope/jScopeFacade.java          \
+	jScope/jScopeMultiWave.java           jScope/jScopeProperties.java        jScope/jScopeWaveContainer.java   \
+	jScope/jScopeWavePopup.java           jScope/MdsAccess.java               jScope/MdsConnection.java         \
+	jScope/MdsDataProvider.java           jScope/MdsMessage.java              jScope/MdsplusParser.java         \
+	jScope/MdsWaveInterface.java          jScope/MultiWaveform.java           jScope/MultiWavePopup.java        \
+	jScope/NotConnectedDataProvider.java  jScope/ProfileDialog.java           jScope/PropertiesEditor.java      \
+	jScope/RandomAccessData.java          jScope/RdaAccess.java               jScope/RowColumnContainer.java    \
+	jScope/RowColumnLayout.java           jScope/SetupDataDialog.java         jScope/SetupDefaults.java         \
+	jScope/SetupWaveformParams.java       jScope/SignalBox.java               jScope/SignalCache.java           \
+	jScope/Signal.java                    jScope/SignalsBoxDialog.java        jScope/SshTunneling.java          \
+	jScope/TSDataProvider.java            jScope/TwuAccess.java               jScope/TwuDataProvider.java       \
+	jScope/TWUFetchOptions.java           jScope/TwuNameServices.java         jScope/TWUProperties.java         \
+	jScope/TWUSignal.java                 jScope/TwuSimpleFrameData.java      jScope/TwuSingleSignal.java       \
+	jScope/TwuWaveData.java               jScope/UniversalDataProvider.java   jScope/UpdateEvent.java           \
+	jScope/UpdateEventListener.java       jScope/WaveContainerEvent.java      jScope/WaveContainerListener.java \
+	jScope/WaveData.java                  jScope/WaveDisplay.java             jScope/WaveformContainer.java     \
+	jScope/WaveformEditor.java            jScope/WaveformEditorListener.java  jScope/WaveformEvent.java         \
+	jScope/Waveform.java                  jScope/WaveformListener.java        jScope/WaveformManager.java       \
+	jScope/WaveformMetrics.java           jScope/WaveInterface.java           jScope/WavePopup.java
+
+WAVEDISPLAY_SRC = 
+JSCOPE_SRC = \
+	jScope/CompositeWaveDisplay.java \
+	jScope/DemoAccess.java           \
+	jScope/DemoDataProvider.java     \
+	jScope/LocalDataProvider.java    \
+	jScope/MdsDataClient.java        \
+	jScope/MdsIOException.java       \
+	jScope/MdsPlusBrowseSignals.java \
+	jScope/TextorBrowseSignals.java
+
 all: all-am
 
 .SUFFIXES:
-$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__configure_deps)
+$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am $(srcdir)/Makefile.common $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
 	    *$$dep*) \
@@ -498,7 +554,7 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile $(SCRIPTS) $(DATA)
+all-am: Makefile $(SCRIPTS) classdist_java.stamp $(DATA)
 installdirs:
 	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(javadir)" "$(DESTDIR)$(docsdir)" "$(DESTDIR)$(javadir)" "$(DESTDIR)$(javadir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
