Adjust for jscoep and jtrav being automaked

--- a/javadispatcher/Makefile.in
+++ b/javadispatcher/Makefile.in
@@ -285,9 +285,8 @@ top_srcdir = @top_srcdir@
 uiddir = @uiddir@
 JAVAROOT = $(builddir)
 CLASSES = $(JAVAROOT)/*.class
-JARDIR = $(top_builddir)/java/classes
-JSCOPEJAR = $(JARDIR)/jScope.jar
-JTRAVERSERJAR = $(JARDIR)/jTraverser.jar
+JSCOPEJAR = $(top_builddir)/javascope/jScope.jar
+JTRAVERSERJAR = $(top_builddir)/javatraverser/jTraverser.jar
 CLASSPATH_ENV = CLASSPATH=$(JSCOPEJAR):$(JTRAVERSERJAR)
 javadir = $(exec_prefix)/java/classes
 java_JAVA = Action.java ActionServer.java Balancer.java \
